welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  h=getMondeHauteur()
  l=getMondeLargeur()
  var T:array [Color] (h)
  for (i <- 0 to (h-1) ) {
  	T(i)=getCouleurSol()
  	avance()    
  }
}